src/ostree/ot-builtin-fsck.c
@@ -224,7 +224,7 @@ fsck_reachable_objects_from_commits (OstreeRepo            *repo,
         goto out;
 
       if (mod == 0 || (i % mod == 0))
-        g_print ("%u/%u objects\n", i, count);
+        g_print ("%u/%u objects\n", i + 1, count);
       i++;
     }
 
